--- a/audiro/pom.xml
+++ b/audiro/pom.xml
@@ -25,6 +25,8 @@
         <spring-security-core-version>6.3.1</spring-security-core-version>
         <spring-security-web-version>6.3.1</spring-security-web-version>
         <spring-security-config-version>6.3.1</spring-security-config-version>
+        <httpclient-version>4.5.14</httpclient-version>
+    		
     </properties>
 
     <dependencies>
@@ -198,7 +200,14 @@
             <artifactId>spring-security-config</artifactId>
             <version>${spring-security-config-version}</version>
         </dependency>
-
+        
+        <!-- Httpclient -->
+        <dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>${httpclient-version}</version>
+		</dependency>
+		
     </dependencies>
 
     <!-- 빌드 툴(플러그인) 설정 -->
