--- a/audiro/pom.xml
+++ b/audiro/pom.xml
@@ -218,6 +218,9 @@
                 <version>3.13.0</version>
                 <configuration>
                     <release>21</release>
+                    <compilerArgs>
+                    	<arg>-parameters</arg>
+                	</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
